# raytracer-weekend

./: .gitattributes  .gitignore  Cargo.toml  rustfmt.toml
console_app/: Cargo.toml
console_app/src/: main.rs  scenes.rs
discovery_app/: Cargo.toml
discovery_app/.cargo/: config.toml
discovery_app/src/: lib.rs
discovery_app/testsuite/: Cargo.toml
discovery_app/testsuite/src/: lib.rs
discovery_app/testsuite/tests/: test.rs
discovery_host_receiver/: Cargo.toml
discovery_host_receiver/src/: main.rs
discovery_host_receiver_gui/: Cargo.toml
discovery_host_receiver_gui/src/: main.rs
models/: monument_downscaled_polygon_reduced.mtl
raytracer_weekend_lib/: Cargo.toml
raytracer_weekend_lib/benches/: basic_benchmark.rs
raytracer_weekend_lib/src/: aabb.rs  bvh.rs  camera.rs  hittable.rs  image_texture.rs  lib.rs  light_source.rs  material.rs  orthonormal_base.rs  perlin.rs  ray.rs  scenes.rs  texture.rs  vec3.rs
raytracer_weekend_lib/src/hittable/: mod.rs  rectangular.rs  spherical.rs  transformations.rs  triangular.rs  volumes.rs
raytracer_weekend_saveload/: Cargo.toml
raytracer_weekend_saveload/src/: hittable.rs  lib.rs  material.rs  texture.rs
src/: aabb.rs  bvh.rs  camera.rs  hittable.rs  image_texture.rs  light_source.rs  main.rs  material.rs  perlin.rs  ray.rs  scenes.rs  texture.rs  vec3.rs
