[workspace]
resolver = "2"

members = [
    "console_app",
    "raytracer_weekend_lib",
    "discovery_app",
    "discovery_app/testsuite",
    "discovery_host_receiver",
    "discovery_host_receiver_gui",
    "raytracer_weekend_saveload",
]

[profile.release.package.raytracer_weekend_console]
debug = true
