[package]
name = "raytracer_weekend_console"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.16", features = ["rayon"] }
raytracer_weekend_lib = { path="../raytracer_weekend_lib"}
rayon = "1.5.0"
clap = "3.0.0-beta.2"
rand = "0.8.0"
image = "0.23.12"
