[package]
name = "raytracer_weekend_console"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.16", features = ["rayon"] }
raytracer_weekend_lib = { path = "../raytracer_weekend_lib" }
rayon = "1.5.0"
clap = { version = "3.1", features = ["derive"] }
rand = "0.9.0-alpha.1"
image = "0.24"
