[package]
name = "raytracer_weekend_console"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
image = "0.24"
indicatif = { version = "0.16", features = ["rayon"] }
rand = "0.9.0-alpha.1"
rayon = "1.5.0"
raytracer_weekend_lib = { path = "../raytracer_weekend_lib" }
raytracer_weekend_saveload = { path = "../raytracer_weekend_saveload" }
serde = { version = "1.0.204", features = ["derive"] }
