[package]
name = "raytracer_weekend_lib"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-error = "0.0.1-rc4"
derive_more = "0.99.11"
rand = "0.8.0"
rayon = "1.5.0"
itertools = "0.10.0"
image = "0.23.12"
dyn-clone = "1.0.3"
num-traits = "0.2.14"
wavefront_obj = "10.0.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "basic_benchmark"
harness = false
