[package]
name = "raytracer_weekend_lib"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-error = "0.0.1-rc4"
derive_more = "0.99.11"
rand = { version = "0.8.0", default-features = false, features = ["small_rng"] }
rayon = { version = "1.5.0", optional = true }
itertools = { version = "0.10.0", default-features = false }
image = { version = "0.23.12", optional = true }
dyn-clone = "1.0.3"
num-traits = { version = "0.2.14", default-features = false }
wavefront_obj = { version = "10.0.0", optional = true }
micromath = { version = "2.0", optional = true, features = ["num-traits"]}

[features]
default = ["std"]
std = ["wavefront_obj", "image", "rand/std", "itertools/default", "num-traits/default", "rayon"]
no_std = ["micromath"]

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "basic_benchmark"
harness = false
