[package]
name = "raytracer_weekend_lib"
version = "0.1.0"
authors = ["Andreas Karg <clonkman.alternative@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-error = "0.0.1-rc4"
derive_more = { version = "1.0.0-beta.6", features = ["constructor"] }
rand = { version = "0.9.0-alpha.1", default-features = false, features = ["small_rng"] }
rayon = { version = "1.10.0", optional = true }
itertools = { version = "0.13.0", default-features = false }
image = { version = "0.25.2", optional = true }
dyn-clone = "1.0.17"
num-traits = { version = "0.2.19", default-features = false }
wavefront_obj = { version = "10.0.0", optional = true }
micromath = { version = "2.1", optional = true, features = ["num-traits"] }
serde = { version = "1.0.204", optional = true, default-features = false, features = ["derive"] }
iter_fixed = "0.4.0"

[features]
default = ["std"]
std = ["wavefront_obj", "image", "rand/std", "rand/std_rng", "rand/getrandom", "itertools/default", "num-traits/default", "rayon"]
no_std = ["micromath"]

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true

[[bench]]
name = "basic_benchmark"
harness = false
